<resources>
    <string name="app_name">Secret Mission Society</string>
    <string name="api_key">AIzaSyAZuYfqXrxTHGmtKCSo7n-7b1ARlY6nIGI</string>
    <string name="already_have_an_account_sign_in_now">Already have an account? <u><font color='#090F47'>Sign In Now</font></u></string>
    <string name="dont_have_an_account_sign_in_now">Don’t have an account? <u><font color='#090F47'>Sign Up Now</font></u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">LOG OUT</string>
    <string name="save_details">SAVE DETAILS</string>
    <string name="enter_a_email">Enter Email</string>
    <string name="change_password">Change Password</string>
    <string name="finished_puzzles">Finished Puzzel</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_new_pass">Enter Confirm Password</string>
    <string name="edit_details">Edit Details</string>
    <string name="lists">Lists</string>
    <string name="play_a_game">Play a Game</string>
    <string name="view_all"><u>View All</u></string>
    <string name="team_information">Team Information</string>
    <string name="leader">Leader Board</string>
    <string name="start"><u>START</u></string>
    <string name="start1">START</string>
    <string name="instruction">Instruction</string>
    <string name="answer">ANSWER</string>
    <string name="you_give_up">You Give Up</string>
    <string name="inventory">Inventory</string>
    <string name="riddle">Riddle (Puzzle)</string>
    <string name="enter_description">Enter Description</string>
    <string name="submit">Submit</string>
    <string name="login">LOGIN!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">LOG IN</string>
    <string name="enter_email">Enter Email</string>
    <string name="contact_us">Contact Us</string>
    <string name="next">NEXT</string>
    <string name="final_puzzel">"Final Puzzle "</string>
    <string name="finish">FINISH</string>
    <string name="finished">FINISHED</string>
    <string name="teams">Teams</string>
    <string name="team">Team :</string>
    <string name="trending">Trending</string>
    <string name="book_event">Book Event</string>
    <string name="pay">Pay</string>
    <string name="add_card">Add Card</string>
    <string name="go_to_home">Go to Home</string>
    <string name="thank_you">Thank you</string>
    <string name="booking">Booking</string>
    <string name="your_booking_is_successful_one_day_before_the_event_we_will_notify_you_and_for_that_keep_checking_your_email">Your booking is successful, One day before the event we will notify you and for that keep checking your email.</string>
    <string name="webstie">Website</string>
    <string name="all_events">All Events</string>
    <string name="enter_name">Enter Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_1">SIGN UP!</string>
    <string name="card">Card</string>
    <string name="permisson_denied">Permission denied</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="please_enter_pass">Please enter password</string>
    <string name="please_enter_con_pass">Please enter confirm password</string>
    <string name="pass_and_confirm_pass_not_macthed">Password and confirm password is not matched.</string>
    <string name="please_wait">Please wait...</string>
    <string name="please_wait_2">Preparing Game...</string>
    <string name="logged_in_success">Logged in successfully</string>
    <string name="please_enter_old_pass">Please enter old password.</string>
    <string name="msg_noInternet">Internet Connection Not Available</string>
    <string name="all_permissions">Please allow all permissions.</string>
    <string name="on_error">On error</string>
    <string name="fetching_fcm_token_failed">Fetching FCM registration token failed</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="password_mismatched">Please make sure your password match.</string>
    <string name="view_event">View Cart</string>
    <string name="cart">Cart</string>
    <string name="incorrect_answer">Answer is incorrect.</string>
    <string name="only">Only</string>
    <string name="ticket_remaining">tickets remaining.</string>
    <string name="enter_team_name">Enter Team Name</string>
    <string name="use_a_code">Use a Code</string>
    <string name="enter_code">Enter code</string>
    <string name="select_places_image">Please select a places image</string>
    <string name="select_people_image">Please select a people image</string>
    <string name="select_object_image">Please select a object image</string>
    <string name="team_members_3_6">Team Members: </string>
    <string name="only_6_tickets_per_team">Only 6 tickets per team.</string>
    <string name="completed_event">Completed Event</string>
    <string name="please_enter_desc">Please enter description</string>
    <string name="upcoming">UPCOMING</string>
    <string name="started">STARTED</string>
    <string name="completed">COMPLETED</string>
    <string name="begin">Begin</string>
    <string name="play">Play</string>
    <string name="welcome_to_virus">Welcome to </string>
    <string name="give_up">Give Up</string>
    <string name="enter_answer">Enter answer...</string>
    <string name="enter_answer_or">Or Enter answer...</string>
    <string name="_1_show_hint1_2_minutes_penalty">1.<u> Show Hint1 (2 minutes penalty)</u></string>
    <string name="_2_show_hint2_5_minutes_penalty">2.<u> Show Hint2 (5 minutes penalty)</u></string>
    <string name="_3_show_hint3_10_minutes_penalty">3.<u> Show Hint3 (10 minutes penalty)</u></string>
    <string name="give_up_message">If you give up, you will receive the answer to this clue but 5 minutes will be added to your time</string>
    <string name="test">Careful! \n Open both test tubes carefully. \n   Pour the antidote into the virus test tube. \n   Dont worry if something spills on you.\n  The Virus is now deactivated and harmless.\n MISSION COMPLETED! \n The world is safe again</string>
    <string name="end_of_the_game">End of the Game</string>
    <string name="cancel">Cancel</string>
    <string name="congratulations_you_have_saved_the_world_from_the_next_pandemic_you_may_open_envelope_4">Congratulations, you have saved the world from the next pandemic. YOU MAY OPEN ENVELOPE #4</string>
    <string name="congratulations">Congratulations</string>
    <string name="downloading_data">Instructions</string>
    <string name="hello">Hello</string>
    <string name="_5_places">places</string>
    <string name="_5_people">people</string>
    <string name="_5_objects">objects</string>
    <string name="team_name">Team Name</string>
    <string name="total_time">Total Time:</string>
    <string name="total_penalities">Total Penalties</string>
    <string name="time_penalties">Time Penalties</string>
    <string name="enter_the_email_address_to_receive_the_reset_passsword_link">Enter the Email Address to receive the reset passsword link.</string>
    <string name="murder_in_the_city">MURDER IN THE CITY</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="master">Master</string>
    <string name="you_have_the_new">You have the new</string>
    <string name="witness_found">Witness found</string>
    <string name="quiz_solved">Quiz Solved</string>
    <string name="hint">Hint</string>
    <string name="select_a_answer">Select a answer</string>
    <string name="option_1">Option 1</string>
    <string name="use_code">Use Code</string>
    <string name="events">Events</string>
    <string name="tittle_event">Tittle Event</string>
    <string name="limited_team_places_available">Limited team places available...</string>
    <string name="only_8_tickets_remaining">Only 8 tickets remaining</string>
    <string name="team_ticket_per_team_of_6">Team ticket (per team of 6)</string>
    <string name="rs_6_300_00">RS. 6,300.00</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="nanaimo_canada">Nanaimo, Canada</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="visit_website">Visit Website</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="instructions">Instructions</string>
    <string name="map">Map</string>
    <string name="final_puzzle">Final Puzzle</string>
    <string name="time_taken">Time Taken:</string>
    <string name="change_language">Change Language</string>
    <string name="select_language">Select Language</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="give_up_title">Give up</string>
    <string name="please_enter_code">Please enter code</string>
    <string name="tickets_remaining">tickets remaining</string>
    <string name="datal"><![CDATA[<p><font color=#666666>Continue if you agree to our</font><font color=#5856F2>  <b><u>Terms & Conditions</u></b></font><font color=#666666> and the <u></font><b><font color=#5856F2>Privacy Policy</font></u></b></font></p>]]></string>
    <string name="privacy">Privacy Policy</string>
    <string name="event_date_exp">Event data is expired</string>
    <string name="haz_click_en_el_men_de_arriba_n_click_en_mapa_para_ver_ubicaciones_n_click_en_inventario_para_ver_pistas_encontradas_n_click_en_rompecabezas_final_para_lograr_terminar_el_reto">Click on the menu above. \n * Click on Map to see locations.\n * Click on Inventory to see clues found \n * Click on Final Puzzle to finish the challenge</string>
    <string name="go_to_map">Go to Map</string>
    <string name="final_pzl_txts">Here you will accumulate the clues found. To solve the final puzzle, CHOOSE a person, an object and a place that according to the INVENTORY clues will reveal the whereabouts of the AZTEC TREASURE. If you do not answer well, you will be penalized with time.</string>
    <string name="wrong_image">Wrong images selected penalty Time Added 5 min.</string>
    <string name="easy">Easy</string>
    <string name="defficalty">Choose Difficulty</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
</resources>