<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15sdp"
    android:orientation="vertical"
    tools:context=".activities.game2.QuestionAct">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@+id/llBottom"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/ivPuzzel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                android:text="@string/you_have_the_new"
                android:textColor="@color/black"
                android:lineSpacingMultiplier="1.1"
                android:id="@+id/tvPuzzel"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:id="@+id/llBottom"
        >
    <LinearLayout
        android:id="@+id/llButtonHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlBottom"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        >

        <TextView
            android:id="@+id/tvHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/hint"
            android:background="@color/yellow"
            android:textColor="@color/black"
            android:padding="@dimen/_5sdp"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            />
        <TextView
            android:id="@+id/tvGiveup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/give_up"
            android:background="@color/red"
            android:textColor="@color/white"
            android:padding="@dimen/_5sdp"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_15sdp">

        <EditText
            android:id="@+id/etAnswer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/tvanswer1"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toLeftOf="@+id/btnSubmit"
            android:background="@drawable/et_bg"
            android:hint="@string/enter_answer"
            android:paddingLeft="@dimen/_10sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvanswer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/answer"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/tvanswer1"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bt_submit_bg"
            android:text="@string/submit"
            android:textColor="@color/white" />



    </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/tvanswer1"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bt_submit_bg"
            android:text="@string/next"
            android:layout_gravity="end"
            android:visibility="gone"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
</layout>