<?xml version="1.0" encoding="utf-8"?>
<layout
    >
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:cardCornerRadius="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/use_code"
                android:textColor="@color/black"
                android:textSize="15dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="@dimen/_5sdp"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:digits="1234567890"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:textColorHint="@color/grey"
                    android:imeOptions="actionNext"
                    android:hint="@string/enter_code"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:textSize="@dimen/_12sdp" />
                <EditText
                    android:layout_marginTop="@dimen/_15sdp"
                    android:id="@+id/et_team_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:textColorHint="@color/grey"
                    android:imeOptions="actionNext"
                    android:hint="@string/enter_team_name"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:paddingHorizontal="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/submit"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/poppins_medium"
                android:background="@drawable/bt_bg"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
