<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:background="@color/appcolor"
            android:id="@+id/rlParent">

            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/defficalty"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
            <ImageView
                android:id="@+id/imgHeader"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_back"/>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/rlParent"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/level_list"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />
        <ScrollView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            >
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >


                <RadioGroup
                    android:padding="@dimen/_5sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <RadioButton
                        android:buttonTint="@color/black"
                        android:checked="true"
                        android:padding="@dimen/_5sdp"
                        android:id="@+id/easy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/easy"
                        android:textSize="@dimen/_14sdp"
                        android:fontFamily="@font/metropolis_bold"
                        />

                    <RadioButton
                        android:buttonTint="@color/black"

                        android:padding="@dimen/_5sdp"
                        android:id="@+id/medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medium"
                        android:textSize="@dimen/_14sdp"
                        android:fontFamily="@font/metropolis_bold"
                        />

                    <RadioButton
                        android:buttonTint="@color/black"
                        android:padding="@dimen/_5sdp"
                        android:id="@+id/hard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hard"
                        android:textSize="@dimen/_14sdp"
                        android:fontFamily="@font/metropolis_bold"
                        />
                </RadioGroup>



            </LinearLayout>

        </ScrollView>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDownload"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/yellow"
            android:text="@string/start"
            android:textSize="@dimen/_13sdp"
            android:visibility="visible"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/bt_bg"/>

    </RelativeLayout>
</layout>
